--- a/package.json
+++ b/package.json
@@ -1,27 +1,33 @@
 {
-  "name": "react-native-radio-button-group",
-  "version": "1.0.2",
-  "description": "Simple and handy animated Radio group button for React Native",
+  "name": "react-native-radio-buttons-group",
+  "version": "1.0.7",
+  "description": "Simple and Best. An easy to use radio buttons for react native apps.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Abilashinamdar/react-native-radio-button-group.git"
+    "url": "git+https://github.com/thakurballary/react-native-radio-buttons-group.git"
   },
   "keywords": [
-    "react-native-radio-button",
-    "react-native-radio",
-    "react-native-button-radio"
+    "react native-radio-buttons",
+    "react-native-simple-radio-buttons",
+    "react-native",
+    "radio-buttons",
+    "radio-buttons-group",
+    "react-native-radio-group",
+    "react-native-component",
+    "ios",
+    "android",
+    "form",
+    "radio",
+    "button"
   ],
-  "author": "Abilash inamdar <abiinamdar9294@gmail.com>",
+  "author": "Thakur Ballary",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Abilashinamdar/react-native-radio-button-group/issues"
+    "url": "https://github.com/thakurballary/react-native-radio-buttons-group/issues"
   },
-  "homepage": "https://github.com/Abilashinamdar/react-native-radio-button-group#readme",
-  "dependencies": {
-    "prop-types": "^15.6.2"
-  }
+  "homepage": "https://github.com/thakurballary/react-native-radio-buttons-group#readme"
 }
